--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,11 @@
+:root {
+  --red: rgb(170, 1, 1);
+  --shadow: rgb(45, 44, 44);
+  --whiteText: rgb(255, 255, 255);
+  --containerBackground: rgb(255, 255, 255);
+  --black: rgb(0, 0, 0);
+}
+
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin: 0px;
@@ -14,10 +22,10 @@ body {
   width: 100%;
   position: fixed;
   z-index: 1;
-  border-bottom: 5px solid rgb(170, 1, 1);
-  box-shadow: 0px 5px 10px rgb(45, 44, 44);
-  color: rgb(255, 255, 255);
-  text-shadow: 4px 4px 4px rgba(28, 10, 10, 0.5);
+  border-bottom: 5px solid var(--red);
+  box-shadow: 0px 5px 10px var(--shadow);
+  color: var(--whiteText);
+  text-shadow: 4px 4px 4px var(--shadow);
   padding: 10px 0px 10px 0px;
   background-image: url('./assets/header-background.png');
   background-size: cover;
@@ -57,26 +65,26 @@ body {
 
 #nav li a {
   text-decoration: none;
-  color: #ffffff;
+  color: var(--whiteText);
 }
 
 #nav li a:hover,
 #nav li a.active {
-  color: rgb(170, 1, 1);
+  color: var(--red);
   transition: color 0.2s ease, box-shadow 0.2s ease;
   text-shadow: 1px 1px 7px rgba(255, 255, 255, 0.5);
 }
 
-/* Add this CSS to your existing styles.css or equivalent stylesheet */
+/* Popup on Portfolio Nav Link */
 #popup {
   position: absolute;
-  background-color: white;
-  border: 2px solid rgb(170, 1, 1);
+  background-color: var(--containerBackground);
+  border: 2px solid var(--red);
   padding: 10px;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 5px var(--shadow);
   border-radius: 8px;
   z-index: 2; /* Make sure popup is above other elements */
-  color: #000000;
+  color: var(--black);
   font-weight: bold;
 }
 
@@ -84,15 +92,14 @@ body {
   margin: 0;
 }
 
-
 /* Profile */
 #profile-container {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  justify-content:space-around; /* Evenly space items horizontally */
-  align-items: center; /* Center items vertically */
-  background-color: white;
+  justify-content:space-around;
+  align-items: center;
+  background-color: var(--containerBackground);
   padding: 10px 20px 60px 20px;
   margin-top: 170px;
   scroll-margin-top: 200px;
@@ -101,16 +108,16 @@ body {
 }
 
 .profile-picture {
-  display: flex; /* Display items horizontally */
+  display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin: 0px; /* Center the profile items */
+  margin: 0px;
 }
 
 #picture {
   border-radius: 50%;
-  border: 5px solid rgb(135, 1, 1);
-  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.66);
+  border: 5px solid var(--red);
+  box-shadow: 5px 5px 20px var(--shadow);
   width: auto;
   transition: transform 0.5s;
 }
@@ -121,10 +128,10 @@ body {
   flex-wrap: nowrap;
   align-items: flex-start;
   padding: 20px;
-  border: 3px solid rgb(170, 1, 1);
+  border: 3px solid var(--red);
   border-radius: 5px;
   box-shadow: 5px 5px 10px gray;
-  background-color: rgb(255, 244, 244);
+  background-color: var(--containerBackground);
   line-height: 35px;
   font-size: 18px;
 }
@@ -140,13 +147,12 @@ h1, h3 {
   margin: 2px;
 }
 
-
 /* Portfolio */
 #portfolio-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Center items horizontally within the row */
-  align-items: flex-start; /* Align items at the top of the container */
+  justify-content: center;
+  align-items: flex-start;
   scroll-margin-top: 105px;
   width: auto;
   height: auto;
@@ -169,11 +175,11 @@ h1, h3 {
 }
 
 .card-links a {
-  color: rgb(170, 1, 1)
+  color: var(--red)
 }
 
 .card-links a:hover {
-  color: rgb(0, 0, 0);
+  color: var(--black);
   transform: scale(1.5);
   transition: transform 0.3s ease-in-out;
 }
@@ -183,7 +189,7 @@ h1, h3 {
 }
 
 .card-links .link-icon:hover {
-  color: rgb(0, 0, 0);
+  color: var(--black);
   transform: scale(1.3);
   transition: transform 0.3s ease-in-out;
 }
@@ -197,8 +203,8 @@ h1, h3 {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  box-shadow: 2px 2px 10px #333;
-  border: 1px solid rgb(0, 0, 0);
+  box-shadow: 2px 2px 10px var(--shadow);
+  border: 1px solid var(--black);
 }
 
 .password-list {
@@ -206,7 +212,7 @@ h1, h3 {
   text-align: left;
   padding-left: 30px;
   padding-bottom: 10px;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid var(--black);
   margin-bottom: 5px;
 }
 
@@ -260,34 +266,10 @@ h1, h3 {
   height: 100%;
   border-radius: 10px;
   box-shadow: 2px 2px 10px #333;
-  border: 1px solid rgb(0, 0, 0);
-  background-color: rgb(255, 236, 236);
+  border: 1px solid var(--black);
+  background-color: rgb(255, 227, 227);
   transform: rotateY(180deg);
   font-size: 12px;
-}
-
-/* Tap Me Note */
-.overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: top;
-  justify-content: flex-start;
-  font-size: large;
-  font-weight: bold;
-}
-
-.overlay p {
-  margin: 10px;
-  height: 23px;
-  width: 80px;
-  text-align: center;
-  background-color: crimson;
-  border-radius: 5px;
-  border: 1px solid yellow;
 }
 
 /* Contact Card */
@@ -306,9 +288,9 @@ h1, h3 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background-color: #f2f2f2;
+  background-color: var(--containerBackground);
   padding: 25px;
-  border: 2px solid  rgb(170, 1, 1);
+  border: 2px solid var(--red);
   border-radius: 5px;
   box-shadow: 2px 2px 10px #333;
   width: 60%;
@@ -356,8 +338,8 @@ h1, h3 {
 }
 
 button[type="submit"] {
-  background-color: rgb(170, 1, 1);
-  color: #fff;
+  background-color: var(--red);
+  color: var(--whiteText);
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -366,7 +348,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color:  black;
+  background-color: var(--black);
 }
 
 .form-group {
@@ -381,8 +363,8 @@ button[type="submit"]:hover {
 }
 
 .thank-you-message {
-  background-color: #000000;
-  color: white;
+  background-color: var(--black);
+  color: var(--whiteText);
   padding: 9px;
   text-align: center;
   border-radius: 5px;
@@ -395,8 +377,8 @@ button[type="submit"]:hover {
 #proficiencies-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Center items horizontally within the row */
-  align-items: flex-start; /* Align items at the top of the container */
+  justify-content: center;
+  align-items: flex-start;
   scroll-margin-top: 80px;
   width: auto;
   height: auto;
@@ -423,7 +405,7 @@ button[type="submit"]:hover {
   left: -20%;
   width: 140%;
   height: 2px;
-  background-color: #000000;
+  background-color: var(--black);
 }
 
 #proficiencies h1 {
@@ -438,8 +420,8 @@ button[type="submit"]:hover {
 
 #proficiencies a {
   display: inline-block;
-  background-color: rgb(170, 1, 1);
-  color: #fff;
+  background-color: var(--red);
+  color: var(--whiteText);
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -449,9 +431,9 @@ button[type="submit"]:hover {
 }
 
 #proficiency-box {
-  background-color: #f2f2f2;
+  background-color: var(--containerBackground);
   padding: 20px;
-  border: 2px solid rgb(170, 1, 1);
+  border: 2px solid var(--red);
   border-radius: 5px;
   margin: 30px;
 }
@@ -477,7 +459,7 @@ button[type="submit"]:hover {
 
 #proficiency-box li::after {
   content: " | ";
-  color: rgb(170, 1, 1);
+  color: var(--red);
   margin-left: 5px;
 }
 
@@ -489,8 +471,8 @@ button[type="submit"]:hover {
 #resume-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center; /* Center items horizontally within the row */
-  align-items: flex-start; /* Align items at the top of the container */
+  justify-content: center;
+  align-items: flex-start;
   scroll-margin-top: 80px;
   width: auto;
   padding: 20px 20px 20px 20px;
@@ -512,8 +494,8 @@ iframe {
 }
 
 #downloadBtn {
-  background-color: rgb(170, 1, 1);
-  color: #fff;
+  background-color: var(--red);
+  color: var(--whiteText);
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
@@ -524,7 +506,7 @@ iframe {
 }
 
 #downloadBtn:hover {
-  background-color:  black;
+  background-color: var(--black);
 }
 
 /* Footer */
@@ -533,8 +515,8 @@ iframe {
   left: 0;
   bottom: 0;
   width: 100%;
-  border-top: 5px solid rgb(170, 1, 1);
-  box-shadow: 5px 5px 10px 5px rgb(47, 32, 18);
+  border-top: 5px solid var(--red);
+  box-shadow: 5px 5px 10px 5px var(--shadow);
   padding: 5px;
   background-image: url('./assets/header-background.png');
   background-size: cover;
@@ -547,15 +529,15 @@ iframe {
 
 .footer-icons a {
   margin: 10px 30px;
-  color: rgb(255, 251, 246);
+  color: var(--whiteText);
   transition: color 0.2s ease, box-shadow 0.2s ease;
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); 
+  box-shadow: 5px 5px 5px var(--shadow); 
 }
 
 .footer-icons a:hover {
-  color: rgb(170, 1, 1);
+  color: var(--red);
   filter: brightness(1.2);
-  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3); 
+  box-shadow: 5px 5px 5px var(--shadow); 
 }
 
 @media (max-width: 768px) {
@@ -564,14 +546,14 @@ iframe {
   }
 
   #picture {
-    max-width: 65%; /* Adjust the max-width for smaller screens */
+    max-width: 65%;
   }
 
   .profile-picture {
-    display: flex; /* Display items horizontally */
+    display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin: 0px; /* Center the profile items */
+    margin: 0px;
     align-items: center;
     margin-bottom: 15px;
   }
